# overloaded

./: .gitignore  .stylish-haskell.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.haskell-ci  cabal.project  cabal.project.local  overloaded.cabal  plot.gnu
.github/workflows/: haskell-ci.yml
example/: AD.hs  Boring.hs  EDSL.hs  Example.hs  IdiomBrackets.hs  LocalDo.hs  RecordFields.hs  VectorSpace.hs
optics-hasfield/Optics/: HasField.hs
overloaded-ad/: overloaded-ad.cabal
overloaded-ad/src/AD/Staged/: Quad.hs  Types.hs
overloaded-ad/src/AD/Staged/Quad/: Network.hs
overloaded-ad/src/AD/Vec/: Quad.hs  Types.hs  Xor.hs
overloaded-ad/src/Data/Type/Nat/: Dim.hs  PlusTree.hs
overloaded-ad/src/Overloaded/Categories/: Constrained.hs  Nat.hs
plugin/: Overloaded.hs
src/: Overloaded.hs
src/GHC/Compat/: All.hs  Expr.hs
src/Overloaded/: Categories.hs  Chars.hs  CodeLabels.hs  CodeStrings.hs  Constructors.hs  Do.hs  If.hs  Lists.hs  Naturals.hs  Numerals.hs  Plugin.hs  RebindableAbstraction.hs  RebindableApplication.hs  Symbols.hs  TypeNats.hs  TypeSymbols.hs
src/Overloaded/Lists/: Bidi.hs
src/Overloaded/Plugin/: Categories.hs  Diagnostics.hs  HasConstructor.hs  HasField.hs  IdiomBrackets.hs  LocalDo.hs  Names.hs  Rewrite.hs  TcPlugin.hs  V.hs
src/Overloaded/Plugin/TcPlugin/: Ctx.hs  Utils.hs
test/: AD.hs  IxMonad.hs  STLC.hs  Tests.hs  opf.hs
test/Overloaded/Test/: Categories.hs  Chars.hs  CodeLabels.hs  CodeStrings.hs  Constructors.hs  Do.hs  If.hs  Labels.hs  Lists.hs  Naturals.hs  Numerals.hs  RebindableAbstraction.hs  RebindableApplications.hs  RecordFields.hs  Strings.hs  Symbols.hs  TypeSymbols.hs
test/Overloaded/Test/CodeLabels/: String.hs
test/Overloaded/Test/Labels/: GenericLens.hs
test/Overloaded/Test/Lists/: Bidi.hs
test/Regexp/: Term.hs  Type.hs
