cabal-version: 2.2
name:          overloaded
version:       0.1
synopsis:      Overloaded pragmas as a plugin
description:
  Implement @Overloaded@ pragmas as a source plugin
  .
  For example we can replace
  .
  @
  {-\# LANGUAGE OverloadedStrings #-}
  @
  .
  with
  .
  @
  {-\# OPTIONS -fplugin=Overloaded -fplugin-opt=Overloaded:Strings #-}
  @

license:       BSD-3-Clause
license-file:  LICENSE
author:        Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:    Oleg Grenrus <oleg.grenrus@iki.fi>
category:      Plugin
tested-with:   GHC ==8.6.5 || ==8.8.1

source-repository head
  type:     git
  location: https://github.com/phadej/overloaded.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    Overloaded
    Overloaded.Chars
    Overloaded.If
    Overloaded.Lists
    Overloaded.Naturals
    Overloaded.Numerals
    Overloaded.Plugin
    Overloaded.Symbols

  -- GHC boot dependencies
  build-depends:
    , base        ^>=4.12.0.0 || ^>=4.13.0.0
    , bytestring  ^>=0.10.8.2
    , containers  ^>=0.6.0.1
    , ghc         ^>=8.6 || ^>=8.8
    , text        ^>=1.2.3.0

  -- other dependencies
  build-depends:
    , fin       ^>=0.1
    , sop-core  ^>=0.5.0.0
    , split     ^>=0.2.3.3
    , syb       ^>=0.7.1
    , symbols   ^>=0.3.0.0
    , vec       ^>=0.1.1.1

test-suite example
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   example
  main-is:          Example.hs

  -- inherited dependencies
  build-depends:
    , base
    , bytestring
    , fin
    , overloaded
    , sop-core
    , symbols
    , vec

  -- test dependencies
  build-depends:
    , HUnit        ^>=1.6.0.0
    , tasty
    , tasty-hunit

test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Tests.hs
  other-modules:
    Overloaded.Test.Chars
    Overloaded.Test.If
    Overloaded.Test.Labels
    Overloaded.Test.Labels.GenericLens
    Overloaded.Test.Lists
    Overloaded.Test.Naturals
    Overloaded.Test.Numerals
    Overloaded.Test.Strings
    Overloaded.Test.Symbols

  -- inherited dependencies
  build-depends:
    , base
    , bytestring
    , containers
    , fin
    , overloaded
    , sop-core
    , symbols
    , text
    , vec

  -- test dependencies
  build-depends:
    , generic-lens  ^>=1.2.0.0
    , lens          ^>=4.18
    , tasty         ^>=1.2.3
    , tasty-hunit   ^>=0.10.0.2
