cabal-version:      2.2
name:               overloaded-ad
version:            0
synopsis:           Overloaded pragmas as a plugin
description:        Overloaded.Categories example: Automatic Differntiation
license:            BSD-3-Clause
license-file:       LICENSE
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
category:           Plugin
extra-source-files: CHANGELOG.md
tested-with:        GHC ==8.6.5 || ==8.8.3 || ==8.10.1

source-repository head
  type:     git
  location: https://github.com/phadej/overloaded.git
  subdir:   overloaded-ad

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
    AD.Staged.Types
    AD.Staged.Quad
    AD.Staged.Quad.Network
    AD.Vec.Quad
    AD.Vec.Types
    Data.Type.Nat.Dim
    Data.Type.Nat.PlusTree
    Overloaded.Categories.Constrained
    Overloaded.Categories.Nat

  build-depends:
    , base
    , constraints
    , fin
    , overloaded
    , template-haskell
    , vec
